<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rank_backgroud"
    android:orientation="vertical" >
    <Button 
        android:id="@+id/start"
        android:layout_width="120dip"
        android:layout_height="40dip"
        android:layout_marginTop="83dip"
        android:text="@string/btn_start"      
        android:onClick="onBtnClick"/>
    <Button 
        android:id="@+id/option"
        android:layout_width="120dip"
        android:layout_height="40dip"
        android:layout_marginTop="20dip"
        android:text="@string/btn_option"      
        />
    <Button 
        android:id="@+id/rank"
        android:layout_width="120dip"
        android:layout_height="40dip"
        android:layout_marginTop="25dip"
        android:text="@string/btn_rank"      
        />
    <Button 
        android:id="@+id/about"
        android:layout_width="120dip"
        android:layout_height="40dip"
        android:layout_marginTop="25dip"
        android:text="@string/btn_about"      
        android:onClick="onBtnClick"/>
	<Button 
        android:id="@+id/quit"
        android:layout_width="120dip"
        android:layout_height="40dip"
        android:layout_marginTop="25dip"
        android:text="@string/btn_quit"      
        android:onClick="onBtnClick"/>
</LinearLayout>
