<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
	    >
	    <TextView 
	       android:layout_height="wrap_content"
	       android:layout_width="wrap_content"
	       android:text="@string/show_voice"
	       />
	    <ToggleButton
	        android:id="@+id/toggle_voice"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textOn="@string/on_voice"
	        android:textOff="@string/off_voice"
	        android:checked="true"
	        />
	</LinearLayout>
	 <Button 
        android:id="@+id/btn_optionback"
        android:layout_width="30dip"
        android:layout_height="40dip"
        android:layout_marginTop="83dip"
        android:text="@string/btn_aboutback"      
        />
	        

</LinearLayout>
